[package]
name = "pb_explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bio = "1.6.0"
clap = "4.5.4"
csv = "1.3.0"
flate2 = "1.0.28"
rust-htslib = { version = "0.46.0", features = ["bzip2", "lzma"], default-features = false }
